# NICS-CyberLab-Extended

./:  cleanup_remoto.sh  .gitignore  README.md  app.py  cyberlab.sh  e2_max_clock_offset.sh  free_port.sh  generate_admin-openrc.sh  generate_app_cred_openrc_from_clouds.sh  nics_capture_summary_all_days.sh  nics_captures.sh  nics_scenario_captures.sh  nics_scenario_traffic_preserve_summary.sh  openstack-resources.sh  pre_memory_cleanup.sh  restart_openstack.sh  set-password.yml  start_dashboard.sh
forensic-orchestrator/: README.md  pyproject.toml
forensic-orchestrator/config/: defaults.yaml
forensic-orchestrator/deployment/remote/agent/: install_wazuh_agent.sh
forensic-orchestrator/src/forensic_orchestrator/application/ports/: evidence_source.py  report_renderer.py  storage_repo.py
forensic-orchestrator/src/forensic_orchestrator/application/use_cases/: build_case_from_wazuh_manager.py  generate_report.py
forensic-orchestrator/src/forensic_orchestrator/domain/entities/: case.py  timeline_event.py
forensic-orchestrator/src/forensic_orchestrator/domain/value_objects/: hash.py
forensic-orchestrator/src/forensic_orchestrator/infrastructure/evidence_sources/: wazuh_manager_fs_source.py
forensic-orchestrator/src/forensic_orchestrator/infrastructure/reporting/: csv_timeline.py  txt_report.py
forensic-orchestrator/src/forensic_orchestrator/infrastructure/storage/: local_fs_repo.py
forensic-orchestrator/src/forensic_orchestrator/presentation/: cli.py
forensic-orchestrator/src/forensic_orchestrator/presentation/controllers/: forensic_controller.py
(+408 files in other folders)
